# mrconvert_v1

./: .gitignore  README.md  pyproject.toml
archive/analysis_outputs/: pdf_structure_analysis.json
archive/completed_plans/: hvdc-node-ontology-format-conversion.plan.md
archive/scripts/: analyze_pdf_structure.py  convert_excel_simple.py  convert_to_ontology_markdown.py  create_material_handling_ontology.py  enhance_material_handling_ontology.py  extract_pdf_sections.py  fix_material_handling_filenames.py  merge_final.py  merge_material_handling_ontology.py
archive/source_documents/: HVDC Material Handling Ontology.md  hvdc_창고_물류_노드_온톨로지_v_2.md
data/csv/: Logistics_Entities__Summary_.csv
data/excel/: HVDC STATUS(20250815).xlsx
data/whatsapp/: README.md
docs/: 00_PROJECT_INDEX.md  HVDC_System_Architecture.md  m.md
docs/guides/: Slash_Commands_Modes_List_v2.1.MD  Slash_Commands_Modes_List_v2.1_머신러더블.txt  지침.MD  지침_압축_12k.txt
docs/ontology/: README.md
docs/original/: BULK_CARGO_OPERATION_원본.MD  LDG.MD  Logistics Document Guardian.MD
output/excel/: HVDC_STATUS_20250815.json  HVDC_STATUS_converted.csv  HVDC_STATUS_full.json  HVDC_STATUS_sample.json
output/integrated/: README.md  hvdc_database_schema.json  hvdc_database_summary.md  hvdc_documentation_index.md  hvdc_integrated_database.json
output/machine_readable/: 00_DOCUMENTATION_INDEX_머신러더블.txt  02-invoice-cost-management_머신러더블.txt  USER_GUIDE_머신러더블.txt  (+12 more)
tests/: test_bidirectional.py  test_cli_bidirectional.py  test_cli_images.py  test_cli_input_discovery.py  test_smoke.py  test_whatsapp_parser.py
(+130 files in other folders)
